# hackyattacky2025

./: .env.example  .gitignore  README.md  image.py  main.py  martian.py  pyproject.toml
ai_runtime/: prompts.py  runtime.py
python_runtime/: playground.py  probe.py
results/: package-lock.json  package.json
results/src/: App.tsx
src/: martian.py  martian_prompt.py
src/ai_runtime/: prompts.py  runtime.py
src/python_runtime/: probe.py
terminal-input/: PROJECT_README.md  app.py  app.py.backup  editor.tcss  my_script.py  probe.py  terminal.py  terminal_prompt.py  test.py  test.py.backup
