[project]
name = "hackyattacky2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.18.0",
    "dotenv>=0.9.9",
    "ipdb>=0.13.13",
    "google-genai>=1.36.0",
    "openai>=1.107.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "textual>=6.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
